--- a/style.css
+++ b/style.css
@@ -69,19 +69,23 @@ form.searchBar button:hover{
 h4{
     text-align: center;
     background-color: #444;
-    color: rgb(236, 236, 236);
+    color: rgb(184, 122, 7);
     padding: 10px;
+    font-weight: bold;
+    font-size: 20px; 
+
 }
+
 div.whips ul {
     text-align: center;
-    background-color: #bbb;
+    background-color: #eee;
     height:290px;
     
- 
 }
 
 a {
-    color: white;
     text-decoration: none;
+    color: rgb(184, 122, 7);
+    
       
 }
