--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 
 h1{
     font-size: 40px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
+    color: rgb(184, 122, 7);
 }
 
 .navbar{
@@ -83,9 +84,25 @@ div.whips ul {
     
 }
 
+a:hover{
+    color: white;
+}
+
+
+
 a {
     text-decoration: none;
     color: rgb(184, 122, 7);
     
       
+}
+
+img{
+    width: 700px;
+}
+
+footer{
+    text-align: center;
+    color: rgb(184, 122, 7);
+    font-size: 20px;
 }
